add music and fix any design

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <span class="icon"></span>
             </label>
         </div>
+        <!-- кнопка ввімкнення музики -->
+        <button id="musicToggle" class="music-btn">🔈 Увімкнути музику</button>
+        <audio id="music" loop></audio>
         <!-- лого і назва -->
         <div style="margin-left: 200px;text-align: center;display: flex;flex-direction: row;">
             <img style="width: 50px;height: 50px;" src="logo.png" alt="">
