--- a/index.html
+++ b/index.html
@@ -1249,5 +1249,14 @@
     </footer>
     <!-- підклчення js -->
     <script src="program.js"></script>
+                                  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F9HMDY80Z4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F9HMDY80Z4');
+</script>
 </body>
 </html>
