--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"siteId":4154889,"cookiePolicyId":80649732,"lang":"en","storage":{"useSiteId":true}};
+</script>
+<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/4154889.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9HMDY80Z4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
